1999-06-03  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/driver.c (dump_to_tape): Tell hard from soft
	(retryable) failures in both dumper and taper results, and behave
	accordingly.

	* docs/SYSTEM.NOTES: On Trusted Solaris, the format of inetd.conf is 
	slightly different.
	Reported by Julian Stevens <julian.stevens@baedsl.co.uk>

1999-06-02  Mike Grupenhoff <kashmir@munge.com>

	* common-src/util.c (fullread, fullwrite): versions of
	read()/write() that keep looping until the buffer is
	completely read/written, or an error occurs.
	* common-src/Makefile.am: build util.c/util.h
	* common-src/fileheader.c, common-src/fileheader.h
	(fill_buffer): remove, replaced with fullread()
	* server-src/holding.c: use fullread() instead of fill_buffer().
	* common-src/bsd-security.c, restore-src/amrestore.c,
	server-src/amcheck.c, server-src/driverio.c, server-src/dumper.c,
	server-src/logfile.c, server-src/taper.c: use fullread/fullwrite
	instead of doing the retry loops manually.

1999-06-02  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (read_mesgfd, read_datafd): upon EOF,
	close the stream.  If the other stream is also closed, shut
	down.

1999-06-02  Mike Grupenhoff <kashmir@munge.com>

	* client-src/amandad.c (REP_TIMEOUT): bump up to six hours, for slow
	machines.
	(exit_check): remove waitpid(), let the service reap its own
	children.
	(s_repwait): rename 'err' to 'errstr' to avoid conflict with
	function in some libcs.
	(s_ackwait): if no pipes were opened by this service, then shut
	it down here.
	(process_netfd): on EOF, be sure to also close the network
	stream.  Also, if this is the last stream to be closed, shut
	down the service.
	(allocstream): correct a comment
	(service_delete): only close the security handle if it is still
	open.  Reap our children here instead of in exit_check().

1999-06-01  Mike Grupenhoff <kashmir@munge.com>

	* server-src/taper.c (write_buffer): assert properly

1999-06-01  John Williams  <williams@morinda.com>